smithy-model/src/test/resources/software/amazon/smithy/model/errorfiles/loader/dupe-operation-binding.errors
[ERROR] -: Parse error at line 5, column 23 near `, | Model
