smithy-model/src/test/resources/software/amazon/smithy/model/errorfiles/loader/dupe-operation-binding.smithy
namespace com.foo

operation GetFoo {
    input: GetFooInput,
    input: GetFooInput,
}

structure GetFooInput {}
